--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,20 @@ body{
   background-color: white;
   box-shadow: 0 0 10px gray;
 }
+.Transaction_form{
+  display: block;
+  margin-top: 0;
+}
+div{
+  display: block;
+}
+label{
+  display: inline-block;
+  margin: 10px 0;
+}
+.btn, input[type=number], input[type=text]{
+  width: 100%;
+  font-size: 16px;
+  padding: 10px;
+  
+}
