--- a/src/App.css
+++ b/src/App.css
@@ -36,5 +36,10 @@ label{
   width: 100%;
   font-size: 16px;
   padding: 10px;
-  
+  display: block;
+}
+input[type=number], input[type=text]{
+  border: 1px solid #dedede;
+  box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.2);
+    outline: 0;
 }
