--- a/src/App.css
+++ b/src/App.css
@@ -2,24 +2,27 @@ body{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Nunito', sans-serif;
 }
 .container{
-   max-width: 400px;
+   max-width: 500px;
    min-height: 450px;
    margin: 0 auto;
-   background-color: #efefef;
-   box-shadow: 0 0 10px gray;
+   box-shadow: 0 0 10px -2px gray;
    margin-top: 50px;
    padding: 15px 50px;
+   letter-spacing: 1px;
+   
 }
 .text_center{
-   text-align: center;
+  font-size: 3rem;
+   font-family: 'Nunito', sans-serif;
 }
 .expense_container{
   display: flex;
   justify-content: space-around;
   background-color: white;
-  box-shadow: 0 0 10px gray;
+  box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.4);
 }
 .Transaction_form{
   display: block;
@@ -31,15 +34,73 @@ div{
 label{
   display: inline-block;
   margin: 10px 0;
+  font-weight: 600;
+  font-size: 18px;
+}
+h3{
+ text-transform: uppercase;
+ font-size: 1.3rem;
+ 
+}
+.border{
+  border-bottom: 1px solid #bbb;
+    padding-bottom: 10px;
+    margin: 40px 0 10px;
+}
+.bottom{
+  border-bottom: 1px solid #bbb;
+    padding-bottom: 10px;
+    margin: 40px 0 10px;
+}
+.big-txt{
+  font-size: 2.2rem;
+}
+
+.IandE{
+  text-align: center;
 }
 .btn, input[type=number], input[type=text]{
-  width: 100%;
+  display: block;
   font-size: 16px;
   padding: 10px;
-  display: block;
+  width: 100%;
+
 }
 input[type=number], input[type=text]{
   border: 1px solid #dedede;
   box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.2);
     outline: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 20px;
+}
+.btn{
+  
+    font-size: 20px;
+    margin: 0 0 10px;
+    outline: 0;
+    border: 0;
+    background-color: blue;
+    padding: 15px;
+    width: 100%;
+    box-sizing: border-box;
+    color: white;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    font-weight: 700;
+}
+.btn:hover{
+  background: white;
+  color: blue;
+ box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.2);
+ font-size: 21px;
+ 
+}
+.income-h3{
+  color: #2ecc71;
+}
+.expense-h3{
+  color: red;
 }
