--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ label{
   display: inline-block;
   margin: 10px 0;
   font-weight: 600;
-  font-size: 20px;
+  font-size: 17px;
   font-family: 'Nunito', sans-serif;
 }
 h3{
@@ -55,12 +55,16 @@ h3{
   border-bottom: 1px solid #bbb;
     padding-bottom: 10px;
     margin: 40px 0 10px;
+    text-transform: capitalize;
+    font-size: 1.5rem;
 }
 .bottom{
   border-bottom: 1px solid #bbb;
     padding-bottom: 10px;
     margin: 40px 0 10px;
     margin-top: 50px;
+    text-transform: capitalize;
+    font-size: 1.5rem;
 }
 .big-txt{
   font-size: 2.2rem;
@@ -83,7 +87,7 @@ input[type=number], input[type=text]{
   box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.2);
     outline: 0;
     margin: 0 0 15px;
-    padding: 15px;
+    padding: 10px;
     width: 100%;
     box-sizing: border-box;
     font-size: 20px;
@@ -96,7 +100,7 @@ input[type=number], input[type=text]{
     outline: 0;
     border: 0;
     background-color: deepskyblue;
-    padding: 15px;
+    padding: 10px;
     width: 100%;
     box-sizing: border-box;
     color: white;
@@ -118,4 +122,20 @@ input[type=number], input[type=text]{
 }
 .expense-h3{
   color: red;
+}
+.hist-div{
+  margin-top: 20px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.2);
+  border-right: 4px solid #2ecc71;
+  
+}
+.hist-txt{
+  margin-left: 20px;
+}
+.hist-amount{
+  margin-right: 15px;
 }
